src/objects/AgreementPartnerAccount__c.object
<CustomObject>
    <fields>
        <fullName>Agreement__c</fullName>
        <label>Agreement</label>
        <referenceTo>VisionCareSalesAgreement__c</referenceTo>
        <relationshipLabel>Agreement Partner Accounts</relationshipLabel>
        <relationshipName>Agreement_Partner_Accounts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Default</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreement Partner Accounts</relationshipLabel>
        <relationshipName>Agreement_Partner_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Agreement Partner Account</label>
    <nameField>
        <displayFormat>APA-{0000}</displayFormat>
        <label>AgreementPartnerAccountName</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Partner Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>